[gd_scene load_steps=9 format=2]

[ext_resource path="res://Personaggio.gd" type="Script" id=1]
[ext_resource path="res://res/img/personaggio/gatto/gatthor-spritesheet-godot.png" type="Texture" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://res/sound/martellone/martellone.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9185, 15.2383 )

[sub_resource type="Animation" id=2]
resource_name = "camminata"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fermo"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0016585 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47.9871, 10 )

[node name="Personaggio" type="KinematicBody2D"]
position = Vector2( 6.16075, -11.5 )
scale = Vector2( 1.5, 1.8 )
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Rinasci" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PuntoAttacco" type="Position2D" parent="."]
position = Vector2( 18, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.1376, -9.48002 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
vframes = 2
hframes = 6
frame = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/camminata = SubResource( 2 )
anims/fermo = SubResource( 3 )

[node name="AreaMartello" type="Area2D" parent="."]
position = Vector2( 68.788, 5.13343 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaMartello"]
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_bottom = 100
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="EffettoMartello" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Rinasci" to="." method="_on_Rinasci_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaMartello" to="." method="_on_AreaMartello_body_entered"]
